--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -372,3 +372,14 @@ url = {https://www.cia.gov/library/center-for-the-study-of-intelligence/csi-publ
 language = {english}
 }
 
+@article{Iffert,
+author = {Iffert, Lars},
+title = {Predictive Analytics richtig einsetzen},
+journal = {Controlling \& Management Review},
+volume = {60},
+note = {Sonderheft 1},
+pages = {16-23},
+year = {2016},
+issn = {2195-8262},
+language = {ngerman}
+}
