--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -970,6 +970,8 @@ die Art der Bewässerung, während der Ertrag die abhängige Variable darstellte
 
 \subsubsection{Zeitreihenanalyse}
 
+% Güteparameter
+
 \subsubsection{Textbasierte Analysen}
 
 \subsection{Werkzeuge}
@@ -1037,7 +1039,20 @@ in der Zukunft nicht genügend Handlungsoptionen zur Verfügung stehen.
 
 \section{Kritische Würdigung von Forecasting und Predictive Analytics}
 
+\cite{Iffert}
 % TODO
+
+% Forecasting eher für strategische und taktische Entscheidungen
+% auf operativer Ebene mehr Erfahrungswerte
+
+% Forecasting für kleinere Gruppen (Unternehmen) bezahlbar, mit Taschenrechner machbar
+% -> leichtere Methode 
+
+% PA teuer (siehe Iffert, S. 22)
+% Preise für Software-Lizenzen für Predictive Analytics so-
+% wie die Kosten für Beratungsleistungen der Anbieter und Ser-
+% vice-Dienstleister für viele Unternehmen schwer rechnen
+
 % subjektive Wsk füllen Entscheidungsbaum (S. 319) und Entscheidungsmatrix
 
 % Große Zahlen erforderlich
