Open Data Portale ausformuliert

--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -358,6 +358,7 @@ language = {ngerman}
 author = {Kent, Sherman},
 title = {Words of Estimative Probability},
 howpublished = {CIA - Center for the Study of Intelligence},
+year = {1964},
 note = {Accessed: 19.11.2020},
 url = {https://www.cia.gov/library/center-for-the-study-of-intelligence/csi-publications/books-and-monographs/sherman-kent-and-the-board-of-national-estimates-collected-essays/6words.html},
 language = {english}
@@ -367,6 +368,7 @@ language = {english}
 author = {Ford, Harold},
 title = {A Tribute to Sherman Kent},
 howpublished = {CIA - Center for the Study of Intelligence},
+year = {1980},
 note = {Accessed: 19.11.2020},
 url = {https://www.cia.gov/library/center-for-the-study-of-intelligence/csi-publications/books-and-monographs/sherman-kent-and-the-board-of-national-estimates-collected-essays/1tribute.html},
 language = {english}
@@ -381,5 +383,25 @@ note = {Sonderheft 1},
 pages = {16-23},
 year = {2016},
 issn = {2195-8262},
+language = {ngerman}
+}
+
+@misc{Borchers,
+title = {Datenportal des Bundes: GovData soll in den Regelbetrieb gehen},
+author = {Borchers, Detlef},
+howpublished = {Heise Online},
+year = {2014},
+note = {Zugegriffen am: 21.11.2020},
+url = {https://www.heise.de/newsticker/meldung/Datenportal-des-Bundes-GovData-soll-in-den-Regelbetrieb-gehen-2254368.html},
+language = {ngerman}
+}
+
+@misc{Krempl,
+title = {GovData: Licht und Schatten beim Datenportal von Bund und Ländern},
+author = {Krempl, Stefan},
+howpublished = {Heise Online},
+year = {2014},
+note = {Zugegriffen am: 21.11.2020},
+url = {https://www.heise.de/newsticker/meldung/GovData-Licht-und-Schatten-beim-Datenportal-von-Bund-und-Laendern-2119699.html},
 language = {ngerman}
 }
