--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -13,9 +13,31 @@ zwei konkrete Anwendungen besonders ausführlich untersucht wurden.
 
 \section{Öffentliche Verwaltung}
 
+
+\subsection{Open Data Portale}
+
+Open Data Portale veröffentlichen Daten von Behörden, sodass prinzipiell jeder
+sie nutzen kann. So existiert in den USA beispielsweise das Portal \glqq{Data.gov}\grqq{}\footnote{
+URL für das US-Portal: \url{https://www.data.gov/}
+}, das deutsche Pendant dazu heißt \glqq{GovData.de}\grqq{}\footnote{
+URL für die deutsche Version: \url{https://www.govdata.de/} 
+} (vgl. \cite{Borchers}). 
+
+Grundsätzlich könnten die Daten auch für Predictive Analytics Zwecke genutzt werden.
+Allerdings hat eine stichprobenartige Untersuchung ergeben, dass es sich bei vielen Daten
+nicht mehr um \glqq{Rohdaten}\grqq{} handelt, sondern um eine aufbereitete Fassung, die sich
+für die visuelle Präsentation eignet. Für Datenanalysen wären jedoch die Rohdaten besser geeignet.
+Weiterhin scheinen manche Behörden im Vergleich zu Anderen viele Daten an das Portal zu übergeben,
+sodass die Auswahl dann unausgeglichen wirkt. Zudem gibt es die Kritik, dass viele relevante
+Datensätze nicht veröffentlicht werden (vgl. \cite{Krempl}).
+
+Insgesamt ist aus der stichprobenartigen Untersuchung der Datensätze auf GovData.de nicht unmittelbar
+hervorgegangen, wie die Daten für Predictive Analytics Anwendungen sinnvoll eingesetzt werden könnten. 
+
+
 % TODO
 % Daten in der öffentlichen Verwaltung
-% Open Data Portale ( GovData.de )
+
 % Abgrenzung zu 'Nowcasting'
 % Predictive Policing
 % Einschätzung der politischen Stimmungslage
