Predictive Policing gestartet

--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -405,3 +405,31 @@ note = {Zugegriffen am: 21.11.2020},
 url = {https://www.heise.de/newsticker/meldung/GovData-Licht-und-Schatten-beim-Datenportal-von-Bund-und-Laendern-2119699.html},
 language = {ngerman}
 }
+
+@book{Perry,
+author = {Perry, Walter and McInnis, Brian and Price, Carter and Smith, Susan and Hollywood, John},
+title = {Predictive Policing - The Role of Crime Forecasting in Law Enforcement Operations},
+publisher = {RAND Corporation},
+year = {2013},
+isbn = {978-0-8330-8155-1},
+language = {english}
+}
+
+@misc{Heuberger,
+title = {Predictive Policing: Software ist keine Wunderwaffe gegen Einbrüche},
+author = {Heuberger, Sarah},
+howpublished = {WIRED},
+year = {2017},
+note = {Zugegriffen am: 21.11.2020},
+url = {https://www.gq-magazin.de/auto-technik/articles/mit-big-data-den-einbrecher-schnappen-klappt-nur-bedingt},
+language = {ngerman}
+}
+
+@book{Gerstner,
+author = {Gerstner, Dominik},
+title = {Predictive Policing als Instrument zur Prävention von Wohnungseinbruchdiebstahl},
+publisher = {Max-Planck-Institut für ausländisches und internationales Strafrecht},
+year = {2017},
+isbn = {978-3-86113-178-6},
+language = {ngerman}
+}
