--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -124,7 +124,29 @@ für verschiedene Beanstandungsgründe zu erstellen (vgl. \cite{OECD}, S.~52).
 
 \subsection{Predictive Policing}
 
-Grafik aus \cite{Bode}, S.~2.
+Predictive Policing bezeichnet die Erstellung von Datenanalysen, um Verbrechen zu verhindern, Verbrechensfälle zu lösen
+und wahrscheinliche Ziele für Polizeieinsätze zu identifizieren (vgl. \cite{Perry}, S.~1-2). Dabei können diese Methoden
+in folgende vier Kategorien eingeteilt werden (vgl. \cite{Perry}, S.~8-9):
+
+\begin{description}
+
+\item[(1) Vorhersage von Verbrechen:] \hfill \\
+Bei diesen Methoden sollen Plätze und Zeiträume identifiziert werden,
+bei denen das Risiko für Verbrechen besonders hoch ist.
+
+\item[(2) Vorhersage von Kriminellen:] \hfill \\
+Hierbei sollen einzelne Personen identifiziert werden, die ein Risiko
+tragen, in Zukunft Verbrechen zu begehen.
+
+\item[(3) Vorhersage von Täterprofilen:] \hfill \\
+Diese Methoden sollen Täterprofile generieren, die begangene Verbrechen
+den wahrscheinlichen Tätern zuordnen.
+
+\item[(4) Vorhersage der Opfer von Kriminalität:] \hfill \\
+Hierbei sollen bestimmte Gruppen oder Einzelpersonen identifiziert werden,
+bei denen ein erhöhtes Risiko besteht, Opfer von Verbrechen zu werden.
+
+\end{description} 
 
 \begin{figure}%[!hbt]
 \centering
@@ -132,6 +154,33 @@ Grafik aus \cite{Bode}, S.~2.
 \includegraphics[scale=1.1]{Grafiken/Predictive_Policing_Ink.pdf} 
 \label{pic:Predictive_Policing}
 \end{figure}
+
+In Deutschland werden bisher nur die Methoden von Punkt (1) verwendet, mit denen
+Delikte wie Wohnungseinbrüche behandelt werden (vgl. \cite{Heuberger}).
+Abbildung~\ref{pic:Predictive_Policing} zeigt hierbei das Vorgehen\footnote{
+Das Original ist in \cite{Bode}, S.~2 zu finden.
+}. Dies ist ähnlich zu den
+allgemeinen Vorgehensmodellen aus Abschnitt~\xcom. Insbesondere die anwendungstypischen Details werden
+im folgenden Text erläutert:
+
+\begin{description}
+
+\item[(1) Daten:] \hfill \\
+Hierbei können polizeiliche und nicht-polizeiliche Daten kombiniert werden. Weiterhin
+besteht die Notwendigkeit, die verschiedenen Daten korrekt zusammenzuführen, damit beispielsweise die räumliche
+und zeitliche Konsistenz gewährleistet ist (vgl. \cite{Bode}, S.~2). Zudem werden bisher keine
+personenbezogenen Daten verwendet (vgl. \cite{Bode}, S.~2 und \cite{Heuberger}) und die Daten konzentrieren
+sich auf Wohnungseinbruchdiebstahl (vgl. \cite{Bode}, S.~2)
+
+\item[(2) Modellierung:] \hfill \\
+Für die Modellierung können die üblichen Algorithmen wie Regression, Entscheidungsbäume oder
+neuronale Netze verwendet werden (vgl. \cite{Bode}, S.~2).
+
+\end{description}
+
+
+
+\subsubsection{Bisheriges Fazit von Predictive Policing in Deutschland}
 
 \subsection{Wahlen und Parteiarbeit}
 
