Predictive Policing fertig

--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -433,3 +433,13 @@ year = {2017},
 isbn = {978-3-86113-178-6},
 language = {ngerman}
 }
+
+@misc{Martin,
+title = {Was Sie über Predictive Analytics wissen müssen},
+author = {Martin, Wolfgang},
+howpublished = {Computerwoche},
+year = {2015},
+note = {Zugegriffen am: 21.11.2020},
+url = {https://www.computerwoche.de/a/praktische-anwendung-von-predictive-analytics,3093386},
+language = {ngerman}
+}
