--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -63,6 +63,30 @@ Versicherung als Eingabe nehmen und könnte als Ausgabe eine Zahl zwischen 0 und
 interpretiert werden, dass es sich bei der neuen Forderung um einen Betrugsfall
 handelt. 
 
+Weiterhin wird zwischen Descriptive, Predictive und Prescriptive Analytics
+unterschieden (vgl. \cite{Martin}):
+
+\begin{description}
+
+\item[Descriptive Analytics:] \hfill \\
+Damit wird der Prozess der Beschreibung von Daten bezeichnet. Dies soll ein
+Verständnis für die Daten und ihre Zusammenhänge liefern (siehe Abschnitt\xcom).
+Descriptive Analytics kann als eigenständiger Prozess durchgeführt werden, oder
+als Vorstufe für weitere Analysen dienen.
+
+\item[Predictive Analytics:] \hfill \\
+Predictive Analytics liefert Prognosen auf der Basis historischer Daten. Bei der
+Unterscheidung zwischen den drei Analytics Varianten wird insbesondere der
+zweite Schritt in Abbildung~\ref{pic:PA} betont, wenn von Predictive Analytics
+gesprochen wird.
+
+\item[Prescriptive Analytics:] \hfill \\
+Prescriptive Analytics geht einen Schritt weiter als Predictive Analytics, indem
+es, zusätzlich zur Prognose, Erklärungen abgibt, warum diese Prognose gemacht wurde.
+Basierend darauf kann Prescriptive Analytics auch Handlungsempfehlungen liefern.
+
+\end{description}
+
 \section{Begriffsabgrenzung}
 
 Unter Data Mining versteht man das Nutzen von statistischen Methoden zur
