--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -176,13 +176,54 @@ sich auf Wohnungseinbruchdiebstahl (vgl. \cite{Bode}, S.~2)
 Für die Modellierung können die üblichen Algorithmen wie Regression, Entscheidungsbäume oder
 neuronale Netze verwendet werden (vgl. \cite{Bode}, S.~2).
 
+\item[(3) Prognoseberechnung:] \hfill \\
+Das Ergebnis der Prognose ist eine Menge an Gebieten, die für den betrachteten Zeitraum
+ein höheres Kriminalitätsrisiko aufweisen (vgl. \cite{Bode}, S.~2).
+
+\item[(4) Prognosedarstellung:] \hfill \\
+Neben der altmodischen Variante von Karten im Papierformat, existieren auch graphische
+Visualisierungen mit Hilfe von Tablet-PCs oder Mobilfunkgeräten (vgl. \cite{Bode}, S.~3).
+
+\item[(5) Prognoseverwertung:] \hfill \\
+Die Prognosen werden durch operative Polizeieinheiten genutzt, die ihre Aktionen mit Hilfe
+der Vorhersagen planen können (vgl. \cite{Bode}, S.~2).
+
+\item[(6) Evaluation:] \hfill \\
+Während das System arbeitet erfolgt auch immer wieder eine Bewertung der Leistung des Systems.
+Die Evaluation beeinflusst die Schritte (1)-(5) (vgl. \cite{Bode}, S.~3).
+
 \end{description}
-
-
 
 \subsubsection{Bisheriges Fazit von Predictive Policing in Deutschland}
 
+Bereits im RAND Bericht von 2013 wurde betont, dass Computer nicht von alleine die Probleme
+lösen können. Es braucht viel Arbeit und Korrektureingriffe von Menschen (vgl. \cite{Perry}, S.~117-118). 
+Dies ist sowohl auf datenanalytischer Ebene der Fall, als auch auf der sozialen Ebene, auf der
+viel \glqq{Feldarbeit}\grqq{} notwendig ist, um das Wissen über konkrete Kriminalitätsumgebung auf dem
+neuesten Stand zu halten. 
+
+Das Fazit von Predictive Policing in Deutschland ist bisher gemischt. Es gibt Berichte über hohe
+Trefferquoten der Anwendungen. Diese sollten allerdings mit Skepsis beurteilt
+werden, da bei der Berechnung der Trefferquoten mangels konkreter Regelungen Abweichungen
+entstehen können (vgl. \cite{Bode}, S.~9).
+Diese Unregelmäßigkeiten können in folgenden Bereichen entstehen (vgl. \cite{Bode}, S.~9-11):
+
+\begin{description}
+\item[Prognose-Delikt:] Welches Art des Delikts wurde konkret vorhergesagt?
+\item[Prognose-Dauer:] Für welchen Zeitraum wurde die Prognose angefertigt?
+\item[Prognose-Raum:] Zählen Treffer an Gebietsrändern?
+\end{description}
+
+Weiterhin kam ein Evaluationsbericht für die Anwendung des Predictive Policing Werkzeugs PRECOBS
+zu dem Schluss, dass es schwer zu beurteilen ist, ob die Anwendung zu einer Verminderung von
+Wohnungseinbrüchen geführt hat, und dass das Werkzeug wahrscheinlich nur zu einer moderaten Kriminalitätsminderung
+beigetragen hat (vgl. \cite{Gerstner}, S.~85).  
+
 \subsection{Wahlen und Parteiarbeit}
+
+Neben den in Abschnitt~\xcom erwähnten Text Mining Anwendungen zur Verbesserung der Serviceleistungen
+von Behörden existieren noch weitere \glqq{experimentelle}\grqq{} Anwendungen. 
+
 
 Ein bekannteres (und umstritteneres) Beispiel für die Anwendung von Datenanalysen
 für politische und wahlkampftaktische Ziele ist der Fall von Cambridge Analytica.
